# jmtpgmr

./: .gitignore  README.md
fw/atmega328/src/: btprogrammer.cpp  btprogrammer.h  jmtprogrammer.cpp  jmtprogrammer.h  wireless_iface.h
fw/atmega328/src/interfaces/: bt_iface.cpp  wifi_iface.cpp
sw/jmtpgmr/: pyproject.toml
sw/jmtpgmr/jmtpgmr/: __main__.py  jmtpgmr.py
sw/jmtpgmr/jmtpgmr/btpgm/: __init__.py  btpgm.py  jmtpgmrerr.py  myTerm.py
sw/jmtpgmr/jmtpgmr/pgm/: btpgm.py  hexprocessor.py  pgm.py
sw/jmtpgmr/jmtpgmr/sockets/: btsock.py  wifisock.py
sw/jmtpgmr/tests/btpgm/: test_btpgm.py
tools/WaveForms/: jmtpgmr_debug.dwf3protocol  jmtpgmr_debug.dwf3supplies  jmtpgmr_debug.dwf3work
