[tool.poetry]
name = "jmtpgmr"
version = "0.0.1"
description = "Microcontroller programming tool"
authors = ["Jess Totorica"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
PyBluez = "^0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
